2003-11-13  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* tables.h, playmidi.h, tables.c, playmidi.c, timidity.c:
	  new option -V power, --volume-curve=power

2003-11-10  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/tables.c:
	  Adjust mean-tone tuning (Salinas) in a stricter theory

2003-11-10  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/resample.c (set_resampler_parm): -N for Newton
	  interpolation should be 1 to 57 odd, not 1 to 56 even

2003-11-08  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/effect.c, timidity/playmidi.c, timidity/reverb.c,
	  timidity/timidity.c:
	  Hack up reverb levels without opt_effect_quality

2003-11-08  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/timidity.c (parse_opt_p): max voices to be changeable
	(timidity_init_player): ditto.
	* timidity/mac_dlog.c (mac_SetPlayOption): ditto.
	* timidity/playmidi.h (max_voices): Add.
	* timidity/playmidi.c (max_voices): Add.
	* timidity/timidity.h (MAX_VOICES): Delete.

2003-11-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/tables.c:
	  Adjust Pythagoras tuning and pure intonation in a stricter theory

2003-11-05  Takashi Iwai <tiwai@suse.de>

	* timidity/alsa_a.c: Fixed bogus calculation of GETSAMPLES.

2003-11-05  mput <root@mput.dip.jp>

	* timidity/readmidi.c: Reindent.

2003-11-04  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/readmidi.c (set_xg_reverb_type): Add.
	(parse_sysex_event_multi): Support for XG SysEx. reverb/chorus types

2003-11-01  Saito <saito2@digitalme.com>

	* timidity/sndfont.c:
	  Fix behaviour of SoundFont's scale-tuning like SB-Live!.
	* timidity/playmidi.c:
	  Add opt_pan_delay.

2003-11-01  mput <root@mput.dip.jp>

	* timidity/timidity.c (parse_opt_h): Fix in help message
	  (parse_opt_j): Enforce returning a int value
	  (parse_opt_Z1): ditto
	  (parse_opt_fail): Change exit status to EXIT_FAILURE

2003-10-31  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix initialization of drumsets on synthesizer modes.
